--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -27,7 +27,7 @@
         margin-bottom: 80px;
     }
 
-    #home-title, #o-nas, #professional-title {
+    #home-title, #about, #professional-title {
         padding-top: 0;
     }
     .img-contents {
