--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ body.light-theme h2 {
     color: #143f02;
 }
 
-#home-title, #about, 
+#home-title, #about-title, 
 #professional-title {
     padding-top: 40px;
 }
