--- a/css/styles.css
+++ b/css/styles.css
@@ -16,13 +16,13 @@ body {
 body.light-theme {
     background-color: #ffffff;
     color: #143f02;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('img/podos_background.webp');
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('../img/podos_background.webp');
 }
 
 body.dark-theme {
     background-color: #000000;
     color: #fff;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('img/podos_background.webp');
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../img/podos_background.webp');
 }
 
 header {
