--- a/css/services-module.css
+++ b/css/services-module.css
@@ -18,7 +18,7 @@
     max-width: 500px;
     overflow: hidden;
     border-radius: 10px;
-    box-shadow: 0 4px 10px #32a201;
+    box-shadow: 0 4px 10px #F2B807;
 }
 
 .carousel-inner {
@@ -88,7 +88,7 @@
     padding: 10px;
     font-size: 1rem;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #F2B807;
     border-radius: 5px;
 }
 
@@ -98,7 +98,7 @@
     border: 1px solid #ccc;
     color: #333;
     border-radius: 5px;
-    box-shadow: 0 4px 6px #32a201;
+    box-shadow: 0 4px 6px #D98E04;
     max-width: 400px;
     margin-top: 20px; 
 } 
