--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+:root {
+    --body-dark-bgcolor: #151715;
+    --body-light-bgcolor: #f2b8072e;
+    --primary-color: #fefefe;
+    --second-color: #20262e;
+
+
+}
+
 * {
     box-sizing: border-box;
 }
@@ -7,22 +16,25 @@ body {
     font-size: 18px;
     line-height: 1.3;
     margin: 0;
-    color: #fff;
+    color: var(--second-color);
     transition: background-color 0.3s, color 0.3s, background-image 0.3s;
     background-size: cover;
     background-position: center;
 }
 
 body.light-theme {
-    background-color: #ffffff;
-    color: #143f02;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('../img/podos_background.webp');
-}
+    background-color: var(--body-light-bgcolor);
+    color: var(--second-color);
+    /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('../img/podos_background.webp');*/
+} 
 
 body.dark-theme {
-    background-color: #000000;
-    color: #fff;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../img/podos_background.webp');
+    background-color: var(--body-dark-bgcolor);
+    color: var(--primary-color);
+   /*  background-image: linear-gradient(to bottom, 
+    rgba(0, 0, 0, 0.8), 
+    rgba(0, 0, 0, 0.8)), 
+    url('../img/podos_background.webp'); */
 }
 
 header {
@@ -34,9 +46,9 @@ header {
     transition: background-color 0.3s;
 }
 
-header.light-theme {
+/* header.light-theme {
     background-color: rgba(255, 255, 255, 0.9);
-}
+} */
 
 .wrap-logo-slogan {
     /* display: flex; */
@@ -70,9 +82,10 @@ nav ul li a {
     font-weight: bold;
 }
 
-nav ul li a.active,
+nav ul li a.active {
+    color: #F2B807;}
 nav ul li a:hover {
-    color: #32a201;
+    color:  #F2CB05;
 }
 
 main {
@@ -91,15 +104,17 @@ section {
 }
 
 h1, h2 {
-    color: #32a201;
     margin-bottom: 10px;
 }
 
 body.light-theme h2 {
-    color: #143f02;
+    color: var(--second-color);
 }
+/* body.dark-theme h2 {
+    color: var(--primary-color);
+} */
 
-#home-title, #about-title, 
+#home-title, #about, 
 #professional-title {
     padding-top: 40px;
 }
@@ -113,7 +128,7 @@ body.light-theme h2 {
     width: 30%;
     border-radius: 2%;
     border: 2px #333 solid;
-    box-shadow: 0 0 10px #32a201;
+    box-shadow: 0 0 10px #D98E04;
     margin: 10px 0 10px 0;
 }
 
@@ -146,14 +161,14 @@ form input, form textarea, form button {
     margin: 10px 0;
     padding: 10px;
     font-size: 1em;
-    border: none;
+    border: 2px solid #D98E04;
     width: 100%;
     border-radius: 5px;
 }
 
 form button {
     width: 30%;
-    background-color: #32a201;
+    background-color: #D98E04;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -197,10 +212,6 @@ footer.light-theme {
     color: #333;
 }
 
-footer h3 {
-    color: #32a201;
-}
-
 .sosial-link {
     text-decoration: none;
     padding-right: 10px;
@@ -236,7 +247,7 @@ footer h3 {
 }
 
 .icon:hover {
-    fill: #32a201;
+    fill: #F2CB05;
     background-size: contain;
 }
 
@@ -247,11 +258,11 @@ footer h3 {
 
 .language-switcher button:hover,
 .theme-switcher button:hover {
-    color: #32a201;
+    color: #D98E04;
 }
 
 button.active {
-    background-color: #143f02;
+    background-color: #c0c5cc;
     color: #fff;
     border-radius: 5px;
     padding: 5px 10px;
@@ -271,11 +282,11 @@ button.active {
     bottom: 90%;
     width: 40px;
     height: 40px;
-    color: #32a201;
+    color: #333;
     cursor: pointer;
     visibility: hidden;
     border-radius: 50px;
-    box-shadow: inset 0 0 0 4px dimgrey;
+    box-shadow: 0 0 10px 4px #D98E04;
     opacity: 0;
     transition: 0.2s;
     transform: translateY(25px);
@@ -290,7 +301,7 @@ button.active {
     width: 100%;
     height: 100%;
     font-size: 22px;
-    content: '👣';
+    content: '👆';
 }
 .scroll-up:hover {
     background-color: #fff;
@@ -303,8 +314,8 @@ button.active {
     
 .scroll-up_svg_path {
     box-sizing: border-box;
-    fill: #ffffffd4;
-    stroke: #47e203;
+    fill: #ffffff;
+    stroke: #D98E04;
     stroke-width: 4px;
     transition: .2s;
 }
@@ -333,7 +344,7 @@ button.active {
     display: flex;
     align-items: center;
     padding: 10px;
-    background-color: #32a201;
+    background-color: #F2B807;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -342,7 +353,7 @@ button.active {
 }
 
 .btn:hover {
-    background-color: #3c3b3b;
+    background-color: #c0c5cc;
 }
 
 .desktop-btn {
@@ -596,6 +607,12 @@ button.active {
 .service-title.open .toggle-icon {
     transform: rotate(180deg); /* Змінюється напрямок іконки при відкритті */
     content: "−"; /* Міняємо знак на "-" */
+}
+
+iframe {
+    border: 2px solid #fefefe;
+    box-shadow: 0 4px 10px #D98E04;
+    width: 100%;
 }
 
 /* Відкритий стан */
